--- a/Java-Advanced/shopmall/.project
+++ b/Java-Advanced/shopmall/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mysql-connector-java-8.0.28</name>
+	<name>shopmall</name>
 	<comment></comment>
 	<projects>
 	</projects>
